--- a/index.html
+++ b/index.html
@@ -42,3 +42,57 @@
     </section>
     <footer></footer>
   </body>
+
+  </html>
+
+  
+<!DOCTYPE html>
+
+<style type='text/css'>
+#fire {
+  position:absolute;
+  top:30px; center:100px;
+  visibility:hidden;
+  }
+    </style>
+    <script type='text/javascript'>
+    var imgId = 'fire';
+    var imgOnTime = 10000;
+    var imgOffTime = 1000;
+    window.onload = function()
+    {
+      if (document.getElementById) {
+        var ele = document.getElementById(imgId);
+        if (ele && ele.style) {
+          setTimeout ('blinkImg()', imgOffTime);
+        }
+      }
+    }
+    function blinkImg()
+    {
+      var v, t, ele = document.getElementById(imgId);
+      if (ele.style.visibility == 'visible'){
+        v = 'hidden';
+        t =imgOffTime;
+      }
+        else {
+        v = 'visible';
+        t = imgOnTime;
+      }
+      ele.style.visibility = v;
+      setTimeout ('blinkImg()', t);
+    }
+    </script>
+    
+    <img src = "Lego.png" id="fire", width = 180, height = 80>
+
+<div>
+    <!--<button class = "btn" >Happy father's day! </Button>-->
+    <button class="btn">Yōkoso</button>
+    <!--<button class="btn">open</button>-->
+    <!--<button class="btn">we are closed today!</button>-->
+        <div class="form-control">
+    <p id="reco" class="blinking"></p>
+    </div>
+
+</html>
