--- a/Menu.html
+++ b/Menu.html
@@ -10,25 +10,29 @@
 
 <body>
 	<p>
-		<h6>Chef Joe served in Japan early in his career and later the United Kingdom. Our chefs seek to delight our clients dining experience. </h6>
+	<h6>Chef Joe served in Japan early in his career and the United Kingdom. Our chefs seek to delight our clients dining experience. </h6>
 	</p>
+	
 	<h3>Menu</h3>
+	
 	<h3>
-		<img src = "MenuPg1.png" alt = "Menu Pg 1" width = 350, height = 550><br>
+	<img src = "MenuPg1.png" alt = "Menu Pg 1" width = 350, height = 550><br>
 
-      <img src = "MenuPg2.png" alt = "Menu Pg 2" width = 350, height = 550><br>
+      	<img src = "MenuPg2.png" alt = "Menu Pg 2" width = 350, height = 550><br>
 
-      <img src = "MenuPg3.png" alt = "Menu Page 3" width = 350, height = 550><br>
+      	<img src = "MenuPg3.png" alt = "Menu Page 3" width = 350, height = 550><br>
 
-      <img src = "MenuPg4.png" alt = "Menu Page 4" width = 350, height = 550><br>
+      	<img src = "MenuPg4.png" alt = "Menu Page 4" width = 350, height = 550><br>
      
-      <img src = "MenuPg5.png" alt = "Menu Page 5" width = 350, height = 550><br>
+      	<img src = "MenuPg5.png" alt = "Menu Page 5" width = 350, height = 550><br>
       
-      <img src = "MenuPg6.png" alt = "Menu Page 6" width = 350, height = 550><br></h3>
-  <p><h5>
-      <a href = "index.html"> back to homepage <a/>
-    </h5></P>      
+      	<img src = "MenuPg6.png" alt = "Menu Page 6" width = 350, height = 550><br>
+	</h3>
+ 	
+	<p><h5>
+		<a href = "index.html"> back to homepage <a/>
+    	</h5></P>      
         <script src="script.js"></script>
-  </body>
+</body>
 <footer></footer>
 </html>
