--- a/Bitch.html
+++ b/Bitch.html
@@ -12,7 +12,7 @@
     <h5><a href = "Bitch.html" Bitch <br></h5>
 
     <h5>
-      <img src = "Bitch.jpeg" alt = "Image of Team" width = 400, height = 250> 
+      <img src = "Bitch.jpeg" alt = "Winning Team" width = 400, height = 250> 
     </h5>  
   <p><h5>
       <a href = "index.html"> back to homepage <a/>
