--- a/Take Away.html
+++ b/Take Away.html
@@ -11,9 +11,9 @@
 
 <body>
 	<p>
-		<!--<h6>Mirabel <h7>BA (Hons)</h7> is the owner of Iro Iro. She is also the team behind 'The Origin Of The Female Species' a winner
+		<h6> Owner <h7>BA (Hons)</h7> is the owner of ABC. She is also the team behind 'The Origin Of The Female Species' a winner
 			at M1 The Strait Times Life Theatre Awards. <a href="Bitch.html">The Origin of The Female Species <br></h5></p> 
-    <p><h6>.</h6></p>-->
+    <p><h6>.</h6></p>
     
     <h5><a href = "Order.html">PLACE-AN-ORDER?<br></h5>
 
