--- a/Menu.html
+++ b/Menu.html
@@ -10,7 +10,7 @@
 
 <body>
 	<p>
-	<h6>Chef Joe served in Japan early in his career and the United Kingdom. Our chefs seek to delight our clients dining experience. </h6>
+	<h6>Chef Joe served in Japan early in his career and the United Kingdom. Our chefs seek to delight our clients dining experience. Partner chef Kelvin worked in Italy, France, Netherlands, Genmany, South Africa, Sarawak and others. </h6>
 	</p>
 	
 	<h3>Menu</h3>
