--- a/Menu.html
+++ b/Menu.html
@@ -10,15 +10,14 @@
 
 <body>
 	<p>
-	<h6>Chef Joe served in Japan early in his career and the United Kingdom. Our chefs seek to delight our clients dining experience. Partner chef Kelvin worked in Italy, France, Netherlands, Genmany, South Africa, Sarawak and others. </h6>
-	</p>
+	<h6> Chef Joe served in Japan early in his career and also the United Kingdom. Partner chef Kelvin worked in Italy, France, Netherlands, Genmany, South Africa, Sarawak and other places. It is our chefs endeavour to delight our clients dining experience.  </h6></p>
 	
 	<h3>Menu</h3>
 	
 	<h3>
-		<img src = "MenuPg7.jpg" alt = "Menu Pg 7" width = 350, height = 550><br>
+	<img src = "MenuPg7.jpg" alt = "Menu Pg 7" width = 350, height = 550><br>
 
-		<img src = "MenuPg1.png" alt = "Menu Pg 1" width = 350, height = 550><br>
+	<img src = "MenuPg1.png" alt = "Menu Pg 1" width = 350, height = 550><br>
 
       	<img src = "MenuPg2.png" alt = "Menu Pg 2" width = 350, height = 550><br>
 
@@ -30,7 +29,7 @@
       
       	<img src = "MenuPg6.png" alt = "Menu Pg 6" width = 350, height = 550><br>
 
-		<img src = "MenuPg8.jpg" alt = "Menu Pg 8" width = 350, height = 550><br>
+	<img src = "MenuPg8.jpg" alt = "Menu Pg 8" width = 350, height = 550><br>
 	</h3>
  	
 	<p><h5>
